...
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".TagEditorActivity"
        tools:layout_editor_absoluteX="193dp">

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/tag_group"
            style="@style/TagGroup.Large"
            android:paddingBottom="8dp"
            app:atg_borderColor="@color/colorAccent"
            app:atg_checkedBackgroundColor="@color/colorAccent"
            app:atg_checkedBorderColor="@color/colorAccent"
            app:atg_textColor="@color/colorAccent"
            app:atg_checkedTextColor="@color/colorWhite"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/announcementList"
            android:layout_width="match_parent"
            android:layout_height="551dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:visibility="visible"
            tools:layout_editor_absoluteY="408dp"
...
