...

    <include
        android:id="@+id/include2"
        layout="@layout/content_announcement_detail" />

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/pdf_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--android:layout_margin="16dp"-->
        <!--android:text="Open PDF"-->
        <!--app:backgroundTint="@color/colorPrimary"-->
        <!--app:rippleColor="@color/colorWhite"-->
        <!--app:srcCompat="@drawable/ic_file_pdf" />-->

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
...
